6.3.4 fixes
OSimulate def to DF; galaxy view too long alliance names; planet list;
phalanx overlay;

--- a/skin/ago/main_planets_improve.css
+++ b/skin/ago/main_planets_improve.css
@@ -62,11 +62,11 @@
     top: -9px
 }
 
-#myWorlds .ago_planets_cooldown {
+/* #myWorlds .ago_planets_cooldown {
     position: absolute;
     left: -2px;
     top: -10px
-}
+} */
 
 .ago_planets_shortcut {
     font-size: 10px;
@@ -76,11 +76,11 @@
     right: -4px
 }
 
-#myWorlds .ago_planets_shortcut {
+/* #myWorlds .ago_planets_shortcut {
     font-size: 11px;
     top: 68px;
     right: 0
-}
+} */
 
 #rechts #myPlanets .smallplanet .active span.planet-name {
     font-size: 12px;
@@ -101,10 +101,10 @@
     top: 38px
 }
 
-#rechts #myWorlds .ago_planets_construction {
+/* #rechts #myWorlds .ago_planets_construction {
     display: block;
     width: 100%
-}
+} */
 
 #rechts.ago_planets_shrink #countColonies {
     display: none
@@ -118,13 +118,11 @@
     box-shadow: 0 0 3px 1px #ff9600, 0 0 1px 1px #ff9600 inset
 }
 
-#myWorlds {
+/* #myWorlds {
     width: 147px
 }
 
 #rechts #myWorlds .planetPic {
-    width: 38px;
-    height: 38px;
     position: relative;
     left: -50px;
     top: 10px
@@ -156,10 +154,6 @@
     top: 20px
 }
 
-#rechts #myWorlds div.smallplanet .planet-name {
-    padding-top: 9px
-}
-
 #rechts #myWorlds div.smallplanet a.constructionIcon {
     left: 4px;
     right: auto;
@@ -187,7 +181,7 @@
 #rechts #myWorlds .ago_planets_cooldown {
     left: 8px;
     top: 18px
-}
+} */
 
 #rechts #myPlanets .planetPic {
     top: 12px
@@ -211,7 +205,7 @@
     height: 20px;
     position: relative;
     left: 0;
-    top: 18px
+    top: 10px
 }
 
 #rechts #myPlanets div.smallplanet a.alert, #rechts #myPlanets div.smallplanet a.alert:link {
